update PER and LOC

--- a/wiki.ipynb
+++ b/wiki.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,10 @@
     "    def __init__(self, rsize):\n",
     "        self.rsize = rsize\n",
     "        self.res = set()\n",
+    "        self.resdict = []\n",
     "        self.lookup = set()\n",
     "\n",
-    "    def _harvester(self, member, *, wiki_wiki, word, check=False, percent, text):\n",
+    "    def _harvester(self, member, *, wiki_wiki, word, percent, text, gender, check=False):\n",
     "        \"\"\"\n",
     "        member - wiki page title\n",
     "        wiki_wiki - language for wiki\n",
@@ -45,9 +46,9 @@
     "                    if not (re.search(check, p.title) or p.title in self.lookup):  # we don't want to go inside an unwanted subcategory\n",
     "                        text.value = p.title\n",
     "                        self.lookup.add(p.title)\n",
-    "                        self._harvester(p, wiki_wiki=wiki_wiki, word=word, check=check, percent=percent, text=text)\n",
+    "                        self._harvester(p, wiki_wiki=wiki_wiki, word=word, check=check, percent=percent,gender=gender,  text=text)\n",
     "                else:\n",
-    "                    self._harvester(p, wiki_wiki=wiki_wiki, word=word, check=check, percent=percent, text=text)\n",
+    "                    self._harvester(p, wiki_wiki=wiki_wiki, word=word, check=check, percent=percent, gender=gender, text=text)\n",
     "        except KeyError:\n",
     "            if re.search(r'(?i)\\b(список|спіс|spis|lista|kategoria|катэгорыя|категор[іи]я|відносини)\\b', member.title):  # universal check for unwanted pages\n",
     "                return    \n",
@@ -55,10 +56,23 @@
     "                for key in member.categories.keys():\n",
     "                    if re.search(word, key):\n",
     "                        langlinks = member.langlinks\n",
-    "                        for lr in ['en', 'pl', 'be', 'uk', 'bg', 'cs', 'ca', 'es', 'tr', 'sl']:\n",
+    "                        middle = {'be': member.title}\n",
+    "                        for lr in ['bg', 'ca', 'cs', 'en', 'es', 'pl', 'ru', 'sl', 'tr', 'uk']:\n",
     "                            v = langlinks.get(lr)\n",
-    "                            if not v: return\n",
-    "                        self.res.add(member.title)\n",
+    "                            if not v: \n",
+    "                                text.value = f'{member.title} has no {lr}'\n",
+    "                                return\n",
+    "                            elif v:\n",
+    "                                middle[lr] = langlinks.get(lr).title\n",
+    "                        for k in member.categories.keys():\n",
+    "                            if re.search(gender, k):\n",
+    "                                middle['gender'] = 'f'\n",
+    "                                break\n",
+    "                        else:\n",
+    "                            middle['gender'] = 'm'\n",
+    "                        if member.title not in self.res:\n",
+    "                            self.res.add(member.title)\n",
+    "                            self.resdict.append(middle)\n",
     "                        percent.value = len(self.res)\n",
     "                        return \n",
     "                    else:\n",
@@ -66,7 +80,7 @@
     "            except:\n",
     "                return \n",
     "\n",
-    "    def harvest(self, *, lang, category, word, check=False):\n",
+    "    def harvest(self, *, lang, category, word, gender, check=False):\n",
     "        '''Wrapper function for harverster with check'''\n",
     "        wiki_wiki = wikipediaapi.Wikipedia(lang)\n",
     "        cat = wiki_wiki.page(category)\n",
@@ -76,18 +90,20 @@
     "        box = Box(children=[percent, text])\n",
     "        display(box)\n",
     "        \n",
-    "        self._harvester(cat, wiki_wiki=wiki_wiki, word=word, check=check, percent=percent, text=text)\n",
+    "        self._harvester(cat, wiki_wiki=wiki_wiki, word=word, check=check, percent=percent, gender=gender, text=text)\n",
     "\n",
     "    def writeres(self, lang, type):\n",
-    "        pickle.dump(self.res, open(f'names/{lang}_{type}_{len(self.res)}', 'wb'))\n",
+    "        pickle.dump(self.resdict, open(f'names/{lang}_{type}_{len(self.res)}', 'wb'))\n",
     "\n",
     "    def showres(self, to_show):\n",
     "        i = 0\n",
-    "        for elem in self.res:\n",
+    "        for key in self.resdict:\n",
     "            if i >= to_show:\n",
     "                break\n",
     "            i += 1\n",
-    "            print(elem)\n",
+    "            for k, v in key.items():\n",
+    "                print(k, v, sep=': ', end='\\t')\n",
+    "                print()\n",
     "\n",
     "    def results(self):\n",
     "        return self.res\n",
@@ -108,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9dc76ef2ae8b4ab6b54052f2c90c24c3",
+       "model_id": "85ac12a9649d4df6b948a39545bc6577",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,13 +140,153 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "be: Джон Браўн\t\n",
+      "bg: Джон Браун\t\n",
+      "ca: John Brown (abolicionista)\t\n",
+      "cs: John Brown\t\n",
+      "en: John Brown (abolitionist)\t\n",
+      "es: John Brown (abolicionista)\t\n",
+      "pl: John Brown\t\n",
+      "ru: Браун, Джон (аболиционист)\t\n",
+      "sl: John Brown (abolicionist)\t\n",
+      "tr: John Brown (lider)\t\n",
+      "uk: Джон Браун\t\n",
+      "gender: m\t\n",
+      "be: Фрыдрых Вёлер\t\n",
+      "bg: Фридрих Вьолер\t\n",
+      "ca: Friedrich Wöhler\t\n",
+      "cs: Friedrich Wöhler\t\n",
+      "en: Friedrich Wöhler\t\n",
+      "es: Friedrich Wöhler\t\n",
+      "pl: Friedrich Wöhler\t\n",
+      "ru: Вёлер, Фридрих\t\n",
+      "sl: Friedrich Wöhler\t\n",
+      "tr: Friedrich Wöhler\t\n",
+      "uk: Фрідріх Велер\t\n",
+      "gender: m\t\n",
+      "be: Гельмут Карл Бернхард фон Мольтке (старэйшы)\t\n",
+      "bg: Хелмут фон Молтке Старши\t\n",
+      "ca: Helmuth von Moltke\t\n",
+      "cs: Helmuth von Moltke starší\t\n",
+      "en: Helmuth von Moltke the Elder\t\n",
+      "es: Helmuth Karl Bernhard von Moltke\t\n",
+      "pl: Helmuth Karl Bernhard von Moltke\t\n",
+      "ru: Мольтке, Хельмут Карл Бернхард фон\t\n",
+      "sl: Helmuth Karl Bernhard von Moltke\t\n",
+      "tr: Helmuth Karl Bernhard von Moltke\t\n",
+      "uk: Гельмут Карл Бернхард фон Мольтке\t\n",
+      "gender: m\t\n",
+      "be: Францэ Прашэрн\t\n",
+      "bg: Франце Прешерн\t\n",
+      "ca: France Prešeren\t\n",
+      "cs: France Prešeren\t\n",
+      "en: France Prešeren\t\n",
+      "es: France Prešeren\t\n",
+      "pl: France Prešeren\t\n",
+      "ru: Прешерн, Франце\t\n",
+      "sl: France Prešeren\t\n",
+      "tr: France Prešeren\t\n",
+      "uk: Франце Прешерен\t\n",
+      "gender: m\t\n",
+      "be: Джэймс Кларк Рос\t\n",
+      "bg: Джеймс Кларк Рос\t\n",
+      "ca: James Clark Ross\t\n",
+      "cs: James Clark Ross\t\n",
+      "en: James Clark Ross\t\n",
+      "es: James Clark Ross\t\n",
+      "pl: James Clark Ross\t\n",
+      "ru: Росс, Джеймс Кларк\t\n",
+      "sl: James Clark Ross\t\n",
+      "tr: James Clark Ross\t\n",
+      "uk: Джеймс Кларк Росс\t\n",
+      "gender: m\t\n",
+      "be: Мілард Філмар\t\n",
+      "bg: Милърд Филмор\t\n",
+      "ca: Millard Fillmore\t\n",
+      "cs: Millard Fillmore\t\n",
+      "en: Millard Fillmore\t\n",
+      "es: Millard Fillmore\t\n",
+      "pl: Millard Fillmore\t\n",
+      "ru: Филлмор, Миллард\t\n",
+      "sl: Millard Fillmore\t\n",
+      "tr: Millard Fillmore\t\n",
+      "uk: Міллард Філлмор\t\n",
+      "gender: m\t\n",
+      "be: Міхаіл Васільевіч Астраградскі\t\n",
+      "bg: Михаил Остроградски\t\n",
+      "ca: Mikhaïl Ostrogradski\t\n",
+      "cs: Michail Vasiljevič Ostrogradskij\t\n",
+      "en: Mikhail Ostrogradsky\t\n",
+      "es: Mijaíl Ostrogradski\t\n",
+      "pl: Michaił Ostrogradski\t\n",
+      "ru: Остроградский, Михаил Васильевич\t\n",
+      "sl: Mihail Vasiljevič Ostrogradski\t\n",
+      "tr: Mihail Ostrogradski\t\n",
+      "uk: Остроградський Михайло Васильович\t\n",
+      "gender: m\t\n",
+      "be: Вінчэнца Беліні\t\n",
+      "bg: Винченцо Белини\t\n",
+      "ca: Vincenzo Bellini\t\n",
+      "cs: Vincenzo Bellini\t\n",
+      "en: Vincenzo Bellini\t\n",
+      "es: Vincenzo Bellini\t\n",
+      "pl: Vincenzo Bellini\t\n",
+      "ru: Беллини, Винченцо\t\n",
+      "sl: Vincenzo Bellini\t\n",
+      "tr: Vincenzo Bellini\t\n",
+      "uk: Вінченцо Белліні\t\n",
+      "gender: m\t\n",
+      "be: Уладзімір Іванавіч Даль\t\n",
+      "bg: Владимир Дал\t\n",
+      "ca: Vladímir Dal\t\n",
+      "cs: Vladimir Dal\t\n",
+      "en: Vladimir Dal\t\n",
+      "es: Vladímir Dal\t\n",
+      "pl: Władimir Dal\t\n",
+      "ru: Даль, Владимир Иванович\t\n",
+      "sl: Vladimir Ivanovič Dalj\t\n",
+      "tr: Vladimir Dal\t\n",
+      "uk: Даль Володимир Іванович\t\n",
+      "gender: m\t\n",
+      "be: Томас Коўл\t\n",
+      "bg: Томас Коул\t\n",
+      "ca: Thomas Cole\t\n",
+      "cs: Thomas Cole\t\n",
+      "en: Thomas Cole\t\n",
+      "es: Thomas Cole\t\n",
+      "pl: Thomas Cole\t\n",
+      "ru: Коул, Томас\t\n",
+      "sl: Thomas Cole\t\n",
+      "tr: Thomas Cole\t\n",
+      "uk: Томас Коул\t\n",
+      "gender: m\t\n"
+     ]
     }
    ],
    "source": [
-    "worker = Harvester(5000)\n",
+    "worker = Harvester(3000)\n",
+    "worker.renew() \n",
+    "worker.harvest(lang='be', category='Катэгорыя:Нарадзіліся ў XIX стагоддзі', word='[Нн]арадзіліся', gender=re.compile(r'(?i)жанчыны|жонкі|\\wенкі\\b|\\wісткі\\b|\\wніцы\\b|\\wіні\\b|прынцэсы|актрысы|куртызанкі|прастытуткі|натуршчыцы|манашкі|\\wчыцы\\b'))\n",
+    "worker.writeres('be', 'per')\n",
+    "worker.showres(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "worker = Harvester(10)\n",
     "worker.renew()\n",
-    "worker.harvest(lang='be', category='Катэгорыя:Нарадзіліся ў XX стагоддзі', word='нарадзіліся')\n",
-    "worker.writeres('be', 'per')"
+    "worker.harvest(lang='pl', category='Kategoria:Wokalistki popowe', word='[uU]rodzeni', gender=re.compile(r'(?i)bokserki|kobiety|\\wstki\\b|iczki\\b|[aeo]rki\\b|damy|[aes][nt]ki\\b|zakonnice|inie\\b|żony|cezarzowe|królowe'))\n",
+    "worker.writeres('pl', 'per')\n",
+    "worker.showres(10)"
    ]
   },
   {
